Fix Crash when closing incognito

WebSiteDataStore crashed during the destructing of WKHTTPCookieStore
The reason:
 WKHTTPCookieStore can't be deleted in IO Thread (undocumented behavior).
The solution:
 Make WKHTTPCookieStore instance in WKHTTPSystemCookieStore as weak, so
 it's not retained in WKHTTPSystemCookieStore and it's deleted/released
 when WebSiteDataStore is deleted.

Bug: 817460, 816879
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I15b384f41496df6d0af9c550b7b13e67a75d236b
Reviewed-on: https://chromium-review.googlesource.com/955547
Commit-Queue: Mohammad Refaat <mrefaat@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541973}
Former-commit-id: 77357f49f14e6d89f81939d68ef8508d0eb07e17